@@ -9,7 +9,7 @@
   <parent>
     <artifactId>com.io7m.verdant</artifactId>
     <groupId>com.io7m.verdant</groupId>
-    <version>0.0.1</version>
+    <version>1.0.0</version>
   </parent>
 
   <artifactId>com.io7m.verdant.tests</artifactId>
@@ -67,5 +67,29 @@
       <artifactId>junit-jupiter-api</artifactId>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>
+            ${argLine}
+            --add-opens
+            org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
+            --add-opens
+            org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
+          </argLine>
+        </configuration>
+      </plugin>
+
+      <!-- Determine test coverage -->
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
